--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <%= javascript_include_tag "rails" %>
 
   <title>Hellogift</title>
   <%= stylesheet_link_tag    "application" %>
