add new list and set user email

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -24,7 +24,7 @@
 				
 				<%= show_flash %>
 
-				<%= render 'layouts/form_list_gifts'%>
+				<%= render 'form_list_gifts' %>
 				
 			</div>
 		</div>
