--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,6 @@
   <%= javascript_include_tag "rails" %>
 
   <title>Hellogift</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
 
 </head>
 <body>
@@ -20,7 +17,7 @@
 <%= yield %>
 
 
-<%= javascript_include_tag "application" %>
+<%= javascript_include_tag "all" %>
 
 
 </body>
