--- a/app/views/lists/create.html.erb
+++ b/app/views/lists/create.html.erb
@@ -1,8 +1,3 @@
-<%= 
-	#@url
-	debug(@p)
-	
-%>
 <div class="main_bl">
 	<div class="int_main">
 		<div class="int-logo">
@@ -17,7 +12,7 @@
 
 		<div class="mklist">
 			<div class="int">
-				<div class="list-link"></div>
+				<div class="list-link"><%= @lnk_to_list %></div>
 
 				<div class="link-info">
 					Скопируйте ее и разошлите своим гостям по электронной почте<br />
@@ -28,29 +23,17 @@
 
 		<div class="getkbl">
 			<div class="int">
-				
-				
-					<div class="keyinf" id="user-email">
-					Если хотите, введите ваш e-mail и мы вышлем вам ключ<br />
-					для редактирования списка, в противном случае список<br />
-					будет нередактируемым:
-					</div>
+		
+				<div class="keyinf" id="user-email">
+				Если хотите, введите ваш e-mail и мы вышлем вам ключ<br />
+				для редактирования списка, в противном случае список<br />
+				будет нередактируемым:
+				</div>
 
-					<div class="inp">
-						
-					</div>
-
-					<div class="sub">
-						
-					</div>
-					
-					
+				<%= render "form_update_user_email" %>
+				
 			</div>
 		</div>
 
-
-		<div class="cp">
-			Сайт сделан в <a href="http://glstr.ru" target="_blank">студии «Главная страница»</a>
-		</div>
 	</div>	
 </div>
